--- a/laokou-service/laokou-generator/pom.xml
+++ b/laokou-service/laokou-generator/pom.xml
@@ -16,11 +16,10 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
-        <!--velocity代码生成使用模板 -->
         <dependency>
-            <groupId>org.apache.velocity</groupId>
-            <artifactId>velocity</artifactId>
-            <version>1.6.2</version>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>${freemarker.version}</version>
         </dependency>
         <dependency>
             <groupId>com.github.ulisesbocchio</groupId>
@@ -43,7 +42,6 @@
             </exclusions>
         </dependency>
     </dependencies>
-
     <build>
         <finalName>generator</finalName>
         <plugins>
@@ -74,5 +72,4 @@
             </plugin>
         </plugins>
     </build>
-
 </project>
