--- a/laokou-cloud/laokou-gateway/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-gateway/src/main/resources/application.yml
@@ -23,43 +23,9 @@ spring:
         - docker0
         - veth.*
     gateway:
-      routes:
-        - id: LAOKOU-ADMIN
-          uri: lb://laokou-admin
-          predicates:
-          - Path=/admin/**
-          filters:
-          - StripPrefix=1
-          # 限流
-          - name: RequestRateLimiter #请求数限流
-            args:
-              key-resolver: "#{@ipKeyResolver}"
-              redis-rate-limiter.replenishRate: 1000
-              redis-rate-limiter.burstCapacity: 3000
-          # 降级
-          - name: Hystrix
-            args:
-              name: default
-              # 降级接口地址
-              fallbackUri: 'forward:/fallback'
-        - id: LAOKOU-AUTH
-          uri: lb://laokou-auth
-          predicates:
-            - Path=/auth/**
-          filters:
-            - StripPrefix=1
-            # 限流
-            - name: RequestRateLimiter #请求数限流
-              args:
-                key-resolver: "#{@ipKeyResolver}"
-                redis-rate-limiter.replenishRate: 1000
-                redis-rate-limiter.burstCapacity: 3000
-            # 降级
-            - name: Hystrix
-              args:
-                name: default
-                # 降级接口地址
-                fallbackUri: 'forward:/fallback'
+      discovery:
+        locator:
+          enabled: true
 
 hystrix:
   command:
