--- a/laokou-cloud/laokou-register/docker/Dockerfile
+++ b/laokou-cloud/laokou-register/docker/Dockerfile
@@ -9,5 +9,6 @@ EXPOSE 1111
 VOLUME /data
 # 复制文件
 COPY register.jar /opt/register.jar
+RUN ln -snf /usr/share/zoneinfo/Asia/Shanghai  /etc/localtime && echo Asia/Shanghai > /etc/timezone
 # 执行命令
 ENTRYPOINT java -Xms256m -Xmx512m -jar /opt/register.jar --spring.profiles.active=prod > /opt/register.log
