--- a/laokou-cloud/laokou-monitor/docker/Dockerfile
+++ b/laokou-cloud/laokou-monitor/docker/Dockerfile
@@ -9,5 +9,6 @@ EXPOSE 5000
 VOLUME /data
 # 复制文件
 COPY monitor.jar /opt/monitor.jar
+RUN ln -snf /usr/share/zoneinfo/Asia/Shanghai  /etc/localtime && echo Asia/Shanghai > /etc/timezone
 # 执行命令
 ENTRYPOINT java -Xms256m -Xmx512m -jar /opt/monitor.jar --spring.profiles.active=prod > /opt/monitor.log
