--- a/laokou-cloud/laokou-gateway/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-gateway/src/main/resources/application.yml
@@ -26,6 +26,7 @@ spring:
       discovery:
         locator:
           enabled: true
+          lower-case-service-id: true
 
 hystrix:
   command:
