--- a/laokou-service/laokou-auth/src/main/resources/application-test.yml
+++ b/laokou-service/laokou-auth/src/main/resources/application-test.yml
@@ -85,7 +85,7 @@ oauth:
     charset: utf-8
     sign_type: json
     gateway_url: https://openapi.alipay.com/gateway.do
-    redirect_url: http://localhost:9999
+    redirect_url: http://192.168.62.1:8000/user/login?redirect=/index
 
 logging:
   file:
