--- a/laokou-cloud/laokou-gateway/src/main/resources/application-prod.yml
+++ b/laokou-cloud/laokou-gateway/src/main/resources/application-prod.yml
@@ -34,7 +34,7 @@ spring:
 
 logging:
   file:
-    name: /opt/logs/${spring.application.name}/info.log
+    name: /opt/logs/${spring.application.name}/error.log
 
 app:
   id: gateway # 应用全局唯一的身份标识
