--- a/laokou-service/laokou-admin/src/main/resources/application-prod.yml
+++ b/laokou-service/laokou-admin/src/main/resources/application-prod.yml
@@ -80,7 +80,7 @@ spring:
 
 logging:
   file:
-    name: /opt/logs/${spring.application.name}/info.log
+    name: /opt/logs/${spring.application.name}/error.log
 
 fdfs:
   connect-timeout: 6000
