--- a/laokou-service/laokou-auth/src/main/resources/application-prod.yml
+++ b/laokou-service/laokou-auth/src/main/resources/application-prod.yml
@@ -90,7 +90,7 @@ oauth:
 
 logging:
   file:
-    name: /opt/logs/${spring.application.name}/info.log
+    name: /opt/logs/${spring.application.name}/error.log
 
 dynamic:
   datasource:
