--- a/laokou-service/laokou-auth/src/main/resources/application-prod.yml
+++ b/laokou-service/laokou-auth/src/main/resources/application-prod.yml
@@ -86,7 +86,7 @@ oauth:
     charset: utf-8
     sign_type: json
     gateway_url: https://openapi.alipay.com/gateway.do
-    redirect_url: http://localhost:9999
+    redirect_url: http://175.178.69.253/user/login?redirect=/index
 
 logging:
   file:
