--- a/pom.xml
+++ b/pom.xml
@@ -97,6 +97,12 @@
         <freemarker.version>2.3.31</freemarker.version>
         <!--transmittable-thread-local版本-->
         <transmittable-thread-local.version>2.12.1</transmittable-thread-local.version>
+        <!--oshi-core版本-->
+        <oshi-core.version>3.9.1</oshi-core.version>
+        <!--jna版本-->
+        <jna.version>4.5.2</jna.version>
+        <!--jna-platform版本-->
+        <jna-platform.version>4.5.2</jna-platform.version>
     </properties>
     <dependencyManagement>
         <dependencies>
