--- a/pom.xml
+++ b/pom.xml
@@ -202,6 +202,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
+                <version>${spring-boot.version}</version>
             </plugin>
         </plugins>
         <!-- profile对资源的操作 -->
