--- a/laokou-service/laokou-auth/pom.xml
+++ b/laokou-service/laokou-auth/pom.xml
@@ -112,6 +112,10 @@
             <artifactId>shiro-spring</artifactId>
             <version>${shiro.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-thymeleaf</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
