--- a/laokou-service/laokou-auth/src/main/resources/application.yml
+++ b/laokou-service/laokou-auth/src/main/resources/application.yml
@@ -22,6 +22,8 @@ spring:
   http:
     encoding:
       charset: UTF-8
+      enabled: true
+      force: true
   thymeleaf:
     encoding: UTF-8
     servlet:
