--- a/laokou-service/laokou-oauth2/src/main/resources/application-dev.yml
+++ b/laokou-service/laokou-oauth2/src/main/resources/application-dev.yml
@@ -9,10 +9,11 @@ security:
 spring:
   datasource:
     druid:
+      db-type: mysql
       driver-class-name: com.mysql.jdbc.Driver
-      url: jdbc:mysql://127.0.0.1:3306/kcloud?serverTimezone=CTT&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
-      username: root
-      password: 123456
+      url: jdbc:mysql://127.0.0.1:3306/kcloud?useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai&useSSL=false
+      username: ENC(7j+MYBNM2fhq8WST3DE3WA==)
+      password: ENC(SX9kPzLDaZb9kGOl2QBziw==)
       initial-size: 10
       max-active: 100
       min-idle: 10
@@ -30,8 +31,8 @@ spring:
       stat-view-servlet:
         enabled: true
         url-pattern: /druid/*
-        login-username: root
-        login-password: koushenhai
+        login-username: ENC(7j+MYBNM2fhq8WST3DE3WA==)
+        login-password: ENC(nj35dMcOWEmR5EASEZR3yfaT4IdT9TPm)
         allow:
       filter:
         stat:
