--- a/laokou-service/laokou-oauth2/src/main/resources/application-test.yml
+++ b/laokou-service/laokou-oauth2/src/main/resources/application-test.yml
@@ -9,10 +9,11 @@ security:
 spring:
   datasource:
     druid:
+      db-type: mysql
       driver-class-name: com.mysql.jdbc.Driver
-      url: jdbc:mysql://192.168.62.128:3306/kcloud?serverTimezone=CTT&useUnicode=true&characterEncoding=utf-8&allowMultiQueries=true
-      username: root
-      password: 123456
+      url: jdbc:mysql://192.168.62.128:3306/kcloud?useUnicode=true&characterEncoding=UTF-8&useJDBCCompliantTimezoneShift=true&useLegacyDatetimeCode=false&serverTimezone=Asia/Shanghai&useSSL=false
+      username: ENC(7j+MYBNM2fhq8WST3DE3WA==)
+      password: ENC(SX9kPzLDaZb9kGOl2QBziw==)
       initial-size: 10
       max-active: 100
       min-idle: 10
@@ -22,22 +23,22 @@ spring:
       time-between-eviction-runs-millis: 60000
       min-evictable-idle-time-millis: 300000
       test-while-idle: true
-      test-on-borrow: false
-      test-on-return: false
+      test-on-borrow: true
+      test-on-return: true
       web-stat-filter:
         enabled: true
         url-pattern: /**
       stat-view-servlet:
         enabled: true
         url-pattern: /druid/*
-        login-username: root
-        login-password: koushenhai
+        login-username: ENC(7j+MYBNM2fhq8WST3DE3WA==)
+        login-password: ENC(nj35dMcOWEmR5EASEZR3yfaT4IdT9TPm)
         allow:
       filter:
         stat:
           log-slow-sql: true
           slow-sql-millis: 1000
-          merge-sql: false
+          merge-sql: true
         wall:
           config:
             multi-statement-allow: true
