--- a/laokou-service/laokou-oauth2/src/main/resources/application-test.yml
+++ b/laokou-service/laokou-oauth2/src/main/resources/application-test.yml
@@ -4,7 +4,7 @@ security:
     type: authorization_code
     scopes: all
     secret: secret
-    redirect_uri: https://1.com/im/loading.html
+    redirect_uri: http://localhost:8080
 
 spring:
   datasource:
