--- a/laokou-service/laokou-auth/src/main/resources/application-prod.yml
+++ b/laokou-service/laokou-auth/src/main/resources/application-prod.yml
@@ -8,7 +8,7 @@ server:
     session:
       cookie:
         http-only: true
-    connection-timeout: 5000ms
+    connection-timeout: -1
 
 app:
   id: auth # 应用全局唯一的身份标识
