--- a/laokou-service/laokou-auth/src/main/resources/application.yml
+++ b/laokou-service/laokou-auth/src/main/resources/application.yml
@@ -88,8 +88,7 @@ hystrix:
 
 feign:
   httpclient:
-    # 开启httpclient
-    enable: ture
+    enabled: true
   hystrix:
     enabled: true
   client:
