--- a/laokou-service/laokou-admin/src/main/resources/application.yml
+++ b/laokou-service/laokou-admin/src/main/resources/application.yml
@@ -79,8 +79,7 @@ hystrix:
 
 feign:
   httpclient:
-    # 开启httpclient
-    enable: ture
+    enabled: true
   hystrix:
     enabled: true
   client:
