--- a/laokou-cloud/laokou-gateway/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-gateway/src/main/resources/application.yml
@@ -79,6 +79,8 @@ gateway:
     - /sys/auth/api/captcha
     - /sys/auth/api/login
     - /sys/auth/api/zfbLogin
+    - /sys/auth/api/zfbBind
+    - /sys/auth/api/open/login
     - /actuator/**
     - /swagger/api-docs
     - /swagger-resources/**
