--- a/laokou-service/laokou-auth/src/main/resources/application-prod.yml
+++ b/laokou-service/laokou-auth/src/main/resources/application-prod.yml
@@ -87,6 +87,7 @@ oauth:
     sign_type: json
     gateway_url: https://openapi.alipay.com/gateway.do
     redirect_url: http://175.178.69.253/user/login?redirect=/index
+    loading_url: http://175.178.69.253/oauth2/zfb/zfb_loading.html?zfb_openid=%s
 
 logging:
   file:
