升级2.7.3版本中（请回退到 版本 481019718d42802ff6e514efd327cebd48538765）

--- a/laokou-cloud/laokou-gateway/gateway/gateway.yml
+++ b/laokou-cloud/laokou-gateway/gateway/gateway.yml
@@ -15,7 +15,7 @@ spring:
                 redis-rate-limiter.replenishRate: 1000
                 redis-rate-limiter.burstCapacity: 3000
             # 降级
-            - name: Hystrix
+            - name: CircuitBreaker
               args:
                 name: default
                 # 降级接口地址
@@ -33,7 +33,7 @@ spring:
                 redis-rate-limiter.replenishRate: 1000
                 redis-rate-limiter.burstCapacity: 3000
             # 降级
-            - name: Hystrix
+            - name: CircuitBreaker
               args:
                 name: default
                 # 降级接口地址
