--- a/laokou-cloud/laokou-gateway/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-gateway/src/main/resources/application.yml
@@ -27,23 +27,43 @@ spring:
           enabled: true
           lower-case-service-id: true
 
-hystrix:
-  command:
-    default:
-      execution:
-        isolation:
-          thread:
-            timeoutInMilliseconds: 60000 #缺省为1000
-          #hystrix配置隔离策略为信号量模式
-          strategy: SEMAPHORE
-          #增加并发量设置（默认是10）
-          semaphore:
-            maxConcurrentRequests: 30000
+resilience4j.circuitbreaker:
+  configs: #通用配置
+    default: # 断路器系统默认配置
+      #失败率，错误率达到或高于该值则进入open状态
+      failureRateThreshold: 50
+      #慢调用阀值，请求执行的时间大于该值时会标记为慢调用
+      slowCallDurationThreshold: 60s
+      #慢调用熔断阀值，当慢调用率达到或高于该值时，进入open状态
+      slowCallRateThreshold: 100
+      #状态滚动收集器大小，close状态时收集多少请求状态，用于计算失败率。
+      slidingWindowSize: 100
+      #状态收集器类型
+      slidingWindowType: COUNT_BASED
+      #计算错误率的最小请求数，不足最小调用次数不会触发任何变化。
+      minimumNumberOfCalls: 10
+      #是否自动进入halfOpen状态，默认false-一定时间后进入halfopen，true-需要通过接口执行。
+      automaticTransitionFromOpenToHalfOpenEnabled: false
+      #进入halfOpen状态时，可以被调用次数，就算这些请求的失败率，低于设置的失败率变为close状态，否则变为open。
+      permittedNumberOfCallsInHalfOpenState: 10
+      #open状态变为half状态需要等待的时间，即熔断多久后开始尝试访问被熔断的服务。
+      waitDurationInOpenState: 60s
+      #事件缓冲区大小
+      eventConsumerBufferSize: 10
+      #被计为失败的异常集合，默认情况下所有异常都为失败。
+      recordExceptions:
+        - java.lang.Exception
+      #不会被计为失败的异常集合，优先级高于recordExceptions。
+      ignoreExceptions:
+        - java.lang.IllegalStateException
+  instances: #熔断器类型
+    aCustomizer: #使用默认配置
+      baseConfig: default
+    cacheCustomizer: #自定义配置
+      failureRateThreshold: 10
 
 feign:
   httpclient:
-    enabled: true
-  hystrix:
     enabled: true
   client:
     config:
