--- a/laokou-base/laokou-common/pom.xml
+++ b/laokou-base/laokou-common/pom.xml
@@ -112,5 +112,9 @@
             <artifactId>knife4j-spring-boot-starter</artifactId>
             <version>${knife4j.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
     </dependencies>
 </project>
