升级2.7.3版本中（请回退到 版本 481019718d42802ff6e514efd327cebd48538765）

--- a/laokou-cloud/laokou-gateway/src/main/resources/application.yml
+++ b/laokou-cloud/laokou-gateway/src/main/resources/application.yml
@@ -62,7 +62,15 @@ resilience4j.circuitbreaker:
     cacheCustomizer: #自定义配置
       failureRateThreshold: 10
 
+resilience4j.timelimiter:
+  instances:
+    default:
+      timeoutDuration: 1s
+      cancelRunningFuture: true
+
 feign:
+  circuitbreaker:
+    enabled: true
   httpclient:
     enabled: true
   client:
