--- a/laokou-service/laokou-oauth2/pom.xml
+++ b/laokou-service/laokou-oauth2/pom.xml
@@ -59,9 +59,11 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.0.2</version>
                 <configuration>
                     <source>${maven.compiler.source}</source>
                     <target>${maven.compiler.target}</target>
+                    <compilerArgument>-Xlint:-options,rawtypes,deprecation,unchecked</compilerArgument>
                 </configuration>
             </plugin>
             <plugin>
