--- a/laokou-base/pom.xml
+++ b/laokou-base/pom.xml
@@ -18,6 +18,7 @@
         <module>laokou-log</module>
         <module>laokou-dynamic-datasource</module>
         <module>laokou-security</module>
+        <module>laokou-bom</module>
     </modules>
 
 </project>
