--- a/pom.xml
+++ b/pom.xml
@@ -21,98 +21,24 @@
         <maven.compiler.target>1.8</maven.compiler.target>
         <!--boot版本-->
         <spring-boot.version>2.7.3</spring-boot.version>
-        <!--lombok版本-->
-        <lombok.version>1.18.10</lombok.version>
-        <!--mysql版本-->
-        <mysql.version>5.1.46</mysql.version>
         <!--cloud版本-->
         <spring-cloud.version>2021.0.4</spring-cloud.version>
-        <!--admin版本-->
-        <spring-boot-admin.version>2.7.4</spring-boot-admin.version>
-        <!--flowable版本-->
-        <flowable.version>6.7.2</flowable.version>
-        <!--mybatis-plus版本 -->
-        <mybatis-plus.version>3.4.3</mybatis-plus.version>
-        <!--commons-httpclient版本-->
-        <commons-httpclient.version>3.1</commons-httpclient.version>
-        <!--commons-configuration版本-->
-        <commons-configuration.version>1.10</commons-configuration.version>
-        <!--redisson版本-->
-        <redisson.version>3.15.5</redisson.version>
-        <!--UserAgentUtils版本-->
-        <UserAgentUtils.version>1.21</UserAgentUtils.version>
-        <!--jsoup版本-->
-        <jsoup.version>1.12.1</jsoup.version>
-        <!--commons-collections版本-->
-        <commons-collections.version>3.2.1</commons-collections.version>
-        <!--hutool-all版本-->
-        <hutool-all.version>5.3.2</hutool-all.version>
-        <!--commons-lang版本-->
-        <commons-lang.version>2.6</commons-lang.version>
-        <!--commons-beanutils版本-->
-        <commons-beanutils.version>1.9.3</commons-beanutils.version>
-        <!--commons-io版本-->
-        <commons-io.version>2.7</commons-io.version>
-        <!--commons-logging版本-->
-        <commons-logging.version>1.1.1</commons-logging.version>
-        <!--commons-fileupload版本-->
-        <commons-fileupload.version>1.3.3</commons-fileupload.version>
-        <!--joda-time版本-->
-        <joda-time.version>2.10</joda-time.version>
-        <!--micrometer-jvm-extras版本-->
-        <micrometer-jvm-extras.version>0.2.0</micrometer-jvm-extras.version>
-        <!--jasypt版本-->
-        <jasypt.version>2.1.0</jasypt.version>
-        <!--apollo-client版本-->
-        <apollo-client.version>1.6.0</apollo-client.version>
-        <!--fastdfs-client版本-->
-        <fastdfs-client.version>1.26.2</fastdfs-client.version>
-        <!--aliyun-sdk-oss版本-->
-        <aliyun-sdk-oss.version>3.8.0</aliyun-sdk-oss.version>
-        <!--alipay-sdk-java版本-->
-        <alipay-sdk-java.version>4.22.34.ALL</alipay-sdk-java.version>
-        <!--shiro版本-->
-        <shiro.version>1.4.0</shiro.version>
-        <!--druid版本-->
-        <druid.version>1.1.17</druid.version>
-        <!--kaptcha版本-->
-        <kaptcha.version>0.0.9</kaptcha.version>
-        <!--guava版本-->
-        <guava.version>19.0</guava.version>
-        <!--jjwt版本-->
-        <jjwt.version>0.7.0</jjwt.version>
-        <!--knife4j版本-->
-        <knife4j.version>3.0.3</knife4j.version>
-        <!--weixin-java-mp版本-->
-        <weixin-java-mp.version>4.2.0</weixin-java-mp.version>
-        <!--commons-codec版本-->
-        <commons-codec.version>1.15</commons-codec.version>
-        <!--oracle驱动依赖-->
-        <oracle.version>11.2.0.3</oracle.version>
-        <!--freemarker模板引擎依赖-->
-        <freemarker.version>2.3.31</freemarker.version>
-        <!--transmittable-thread-local版本-->
-        <transmittable-thread-local.version>2.12.1</transmittable-thread-local.version>
-        <!--oshi版本-->
-        <oshi.version>5.8.0</oshi.version>
-        <!-- spring-security-oauth2版本 -->
-        <spring-security-oauth2.version>2.3.3.RELEASE</spring-security-oauth2.version>
     </properties>
     <dependencyManagement>
         <dependencies>
+            <!-- 定义公共版本-->
+            <dependency>
+                <groupId>io.laokou</groupId>
+                <artifactId>laokou-bom</artifactId>
+                <version>${laokou.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <!-- 定义 spring boot 版本 -->
             <dependency>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-starter-parent</artifactId>
                 <version>${spring-boot.version}</version>
-                <type>pom</type>
-                <scope>import</scope>
-            </dependency>
-            <!-- 定义 spring boot admin 版本 -->
-            <dependency>
-                <groupId>de.codecentric</groupId>
-                <artifactId>spring-boot-admin-dependencies</artifactId>
-                <version>${spring-boot-admin.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -123,24 +49,6 @@
                 <version>${spring-cloud.version}</version>
                 <type>pom</type>
                 <scope>import</scope>
-            </dependency>
-            <!-- 定义 lombok 版本 -->
-            <dependency>
-                <groupId>org.projectlombok</groupId>
-                <artifactId>lombok</artifactId>
-                <version>${lombok.version}</version>
-            </dependency>
-            <!-- 定义 mysql 版本 -->
-            <dependency>
-                <groupId>mysql</groupId>
-                <artifactId>mysql-connector-java</artifactId>
-                <version>${mysql.version}</version>
-            </dependency>
-            <!-- 定义 flowable 版本 -->
-            <dependency>
-                <groupId>org.flowable</groupId>
-                <artifactId>flowable-spring-boot-starter-process</artifactId>
-                <version>${flowable.version}</version>
             </dependency>
         </dependencies>
     </dependencyManagement>
@@ -207,9 +115,9 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>2.0.2</version>
                 <configuration>
-                    <source>1.8</source>
-                    <target>1.8</target>
-                    <compilerArgument>-Xlint:-options,rawtypes,deprecation,unchecked</compilerArgument>
+                    <source>${maven.compiler.source}</source>
+                    <target>${maven.compiler.target}</target>
+<!--                    <compilerArgument>-Xlint:-options,rawtypes,deprecation,unchecked</compilerArgument>-->
                 </configuration>
             </plugin>
         </plugins>
