--- a/laokou-service/laokou-auth/src/main/resources/application.yml
+++ b/laokou-service/laokou-auth/src/main/resources/application.yml
@@ -30,7 +30,7 @@ spring:
     suffix: .html
     prefix: classpath:/templates/
   main:
-    allow-bean-definition-overriding: true
+    allow-circular-references: true
   cloud:
     inetutils:
       ignoredInterfaces:
@@ -70,6 +70,21 @@ mybatis-plus:
     call-setters-on-nulls: true
     jdbc-type-for-null: 'null'
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+seata:
+  enabled: true
+  # 启用自动代理数据源
+  enable-auto-data-source-proxy: false
+  application-id: seata-client1 #seata客户端id
+  tx-service-group: default_tx_group #照搬即可
+  service:
+    vgroup-mapping:
+      default_tx_group: seata-server #照搬即可
+  registry:
+    type: eureka
+    eureka:
+      service-url: ${eureka.client.service-url.defaultZone}
+      weight: 1
 
 feign:
   httpclient:
